--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8">
     <title>Electron boilerplate</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
-    <!-- <link rel="stylesheet" href="node_modules/bootstrap-select/dist/css/bootstrap.css"> -->
     <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
     <div class="container">
+	  	<span class="glyphicon glyphicon-remove"></span>
         <div class="dropdown">
             <span type="button" data-toggle="dropdown">
 			  	<span class="glyphicon glyphicon-flag"></span>
@@ -219,44 +219,7 @@
             <img src="{0}" alt="">
         </div>
     </script>
-    <script src="bundle.js"></script>
+    <script src="build/bundle.js"></script>
 </body>
 
 </html>
-<!--
-<select class="form-control locale">
-    <option value="en_AU">Australia (English)</option>
-    <option value="en_au_ocker">Australia Ocker (English)</option>
-    <option value="en_BORK">Bork (English)</option>
-    <option value="en_CA">Canada (English)</option>
-    <option value="fr_CA">Canada (French)</option>
-    <option value="zh_CN">Chinese</option>
-    <option value="zh_TW">Chinese (Taiwan)</option>
-    <option value="nl">Dutch</option>
-    <option value="en">English</option>
-    <option value="fa">Farsi</option>
-    <option value="fr">French</option>
-    <option value="ge">Georgian</option>
-    <option value="de">German</option>
-    <option value="de_AT">German (Austria)</option>
-    <option value="de_CH">German (Switzerland)</option>
-    <option value="en_GB">Great Britain (English)</option>
-    <option value="en_IND">India (English)</option>
-    <option value="en_IE">Ireland (English)</option>
-    <option value="it">Italian</option>
-    <option value="ja">Japanese</option>
-    <option value="ko">Korean</option>
-    <option value="nep">Nepalese</option>
-    <option value="nb_NO">Norwegian</option>
-    <option value="pl">Polish</option>
-    <option value="pt_BR">Portuguese (Brazil)</option>
-    <option value="ru">Russian</option>
-    <option value="sk">Slovakian</option>
-    <option value="es">Spanish</option>
-    <option value="sv">Swedish</option>
-    <option value="tr">Turkish</option>
-    <option value="uk">Ukrainian</option>
-    <option value="en_US">United States (English)</option>
-    <option value="vi">Vietnamese</option>
-</select>
- -->
